[MNT-25404] Query Performance - High performance cost in retrieving nodes/node properties for large result sets - Fix Stream to list