@@ -3365,7 +3365,7 @@ public abstract class AbstractNodeDAOImpl implements NodeDAO, BatchingDAO
      */
     private void setNodeAspectsCached(Map<Long, Set<QName>> nodeAspects)
     {
-        List<Long> nodeIds = nodeAspects.keySet().stream().toList();
+        List<Long> nodeIds = nodeAspects.keySet().stream().collect(Collectors.toList());
 
         List<NodeVersionKey> nodeVersionKeys = getNodesNotNull(nodeIds, false).stream()
                 .map(Node::getNodeVersionKey)
